--- a/assignment6.ipynb
+++ b/assignment6.ipynb
@@ -36,6 +36,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\\newpage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Submission Deadline\n",
     "\n",
     "- All submissions must be made before 10:00 PM on Thursday, April 18, 2024.\n",
@@ -2172,7 +2179,7 @@
     "ax2.set_title(\"Scree Plot\")"
    ]
   },
-{
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -3229,7 +3236,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# question 16\n",
+    "<https://github.com/Christina137/A6>"
+   ]
   },
   {
    "cell_type": "markdown",
